[project]
name = "sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Navery01", email = "nvavery@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
]

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
sidecar = { workspace = true }

[dependency-groups]
dev = [
    "sidecar",
]
